src-errormsg/E02-SwapArguments/Plutarch.err

/Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E02-SwapArguments/Plutarch.hs:39:32: error: [GHC-83865]
    • Couldn't match type ‘b :--> (b :--> b)’ with ‘PInteger’
      Expected: Term s PInteger
        Actual: Term s (b :--> (b :--> b))
    • In the second argument of ‘(#)’, namely
        ‘plam (\ acc n -> acc + n)’
      In the expression: pfoldList # 0 # plam (\ acc n -> acc + n)
      In an equation for ‘psumIntegers’:
          psumIntegers = pfoldList # 0 # plam (\ acc n -> acc + n)
   |
39 | psumIntegers = pfoldList # 0 # plam (\acc n -> acc + n)
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^
